templates/api.yml
apiVersion: v1
kind: Service
metadata:
  name: $($config.baseName)-api
spec:
  selector:
    app: $($config.baseName)-api
  ports:
  - port: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: $($config.baseName)-api
  labels:
    app: $($config.baseName)-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $($config.baseName)-api
  template:
    metadata:
      labels:
        app: $($config.baseName)-api
    spec:
      containers:
      - name: $($config.baseName)-api
        image: $($config.apiImage)
        ports:
        - containerPort: 80
