templates/mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: $($config.baseName)-sql
spec:
  selector:
    app: $($config.baseName)-sql
  ports:
  - port: 3306

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: $($config.baseName)-sql
  labels:
    app: $($config.baseName)-sql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $($config.baseName)-sql
  template:
    metadata:
      labels:
        app: $($config.baseName)-sql
    spec:
      containers:
      - name: $($config.baseName)-sql
        image: mysql:8.0.13
        args: ["--default-authentication-plugin=mysql_native_password"]
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: data-volume
      volumes:
      - name: data-volume
        azureDisk:
          kind: Managed
          diskName: sqldata
          diskURI: $($config.sqlDataDisk)
