templates/ingress-route.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $($vars.serviceName)-ingress-routes
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: $($vars.type)
    nginx.ingress.kubernetes.io/rewrite-target: /`$1
spec:
  tls:
  - hosts:
    - $($vars.domain)
    secretName: tls-secret
  rules:
  - host: $($vars.domain)
    http:
      paths:
      - backend:
          serviceName: $($vars.serviceName)
          servicePort: $($vars.servicePort)
        path: /(.*)
